--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
     font-size: 2em;
     font-family: sans-serif;
     padding: 20px;
-    margin: 20px 0;
+    margin: 20px 1px;
     background: #eee;
     color: #999;
   }
